--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-particles": "^2.12.2",
+    "react-timer-hook": "^3.0.7",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tsparticles-slim": "^2.12.0",
+    "typescript": "5.1.6",
+    "viem": "^1.6.4",
+    "wagmi": "^1.3.10"
   }
 }
